--- a/_posts.sass
+++ b/_posts.sass
@@ -8,12 +8,11 @@ html
 
 body
   margin: 0
-  padding: 80px 105px
   background-color: $gray
 
 .posts
   margin: 0 auto
-  padding: 0 50px
+  padding: 80px 0
   max-width: 1240px
 
 .title
@@ -34,13 +33,16 @@ body
   &:last-child
     margin-right: 0
 
+.image
+  width: 100%
+  height: auto
+
 .information
   padding: 25px
 
 .link
   display: inline-block
   margin-bottom: 10px
-  max-width: auto
   text-decoration: none
   background-color: $turquoise
   padding: 5px 10px
@@ -51,6 +53,9 @@ body
   text-align: center
   letter-spacing: 0.4px
   color: $blue
+  transition: filter .3s
+  &:hover
+    filter: brightness(95%)
 
 .card-title
   margin: 0
