--- a/style.css
+++ b/style.css
@@ -10,13 +10,12 @@ html {
 
 body {
   margin: 0;
-  padding: 80px 105px;
   background-color: #F7F9FA;
 }
 
 .posts {
   margin: 0 auto;
-  padding: 0 50px;
+  padding: 80px 0;
   max-width: 1240px;
 }
 
@@ -41,6 +40,11 @@ body {
   margin-right: 0;
 }
 
+.image {
+  width: 100%;
+  height: auto;
+}
+
 .information {
   padding: 25px;
 }
@@ -48,7 +52,6 @@ body {
 .link {
   display: inline-block;
   margin-bottom: 10px;
-  max-width: auto;
   text-decoration: none;
   background-color: #E6F7FF;
   padding: 5px 10px;
@@ -59,6 +62,10 @@ body {
   text-align: center;
   letter-spacing: 0.4px;
   color: #2C90C9;
+  transition: filter 0.3s;
+}
+.link:hover {
+  filter: brightness(95%);
 }
 
 .card-title {
